[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Andrew Pylypiv <pylypiv10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"
celery = "^5.0.2"
waitress = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
